@@ -1,6 +1,7 @@
 // Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.jetbrains.python.psi.types;
 
+import com.intellij.openapi.util.Ref;
 import com.intellij.psi.PsiElement;
 import com.intellij.util.ArrayUtilRt;
 import com.intellij.util.ProcessingContext;
@@ -13,17 +14,17 @@ import com.jetbrains.python.psi.PyFunction;
 import com.jetbrains.python.psi.PyQualifiedNameOwner;
 import com.jetbrains.python.psi.PyReferenceExpression;
 import com.jetbrains.python.psi.PyUtil;
+import com.jetbrains.python.psi.impl.ArgumentMappingResults;
 import com.jetbrains.python.psi.impl.ParamHelper;
 import com.jetbrains.python.psi.impl.PyCallExpressionHelper;
+import com.jetbrains.python.psi.impl.PyTypeProvider;
 import com.jetbrains.python.psi.resolve.PyResolveContext;
 import com.jetbrains.python.psi.resolve.RatedResolveResult;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 
 public class PyCallableTypeImpl implements PyCallableType {
@@ -32,50 +33,33 @@ public class PyCallableTypeImpl implements PyCallableType {
   private final @Nullable PyType myReturnType;
   private final @Nullable PyCallable myCallable;
   private final @Nullable PyFunction.Modifier myModifier;
-  private final int myImplicitOffset;
 
   public PyCallableTypeImpl(@Nullable PyCallableParameterVariadicType parametersType, @Nullable PyType returnType) {
-    this(null, parametersType, returnType, null, null, 0);
-  }
-
-  /**
-   * remove in 2026.3
-   *
-   * @deprecated provide `typeParameters`
-   */
-  @Deprecated(forRemoval = true)
-  public PyCallableTypeImpl(@Nullable PyCallableParameterVariadicType parametersType,
-                            @Nullable PyType returnType,
-                            @Nullable PyCallable callable,
-                            @Nullable PyFunction.Modifier modifier,
-                            int offset) {
-    this(null, parametersType, returnType, callable, modifier, offset);
+    this(null, parametersType, returnType, null, null);
   }
 
   public PyCallableTypeImpl(@Nullable List<PyTypeParameterType> typeParameters,
                             @Nullable PyCallableParameterVariadicType parametersType,
                             @Nullable PyType returnType,
                             @Nullable PyCallable callable,
-                            @Nullable PyFunction.Modifier modifier,
-                            int offset) {
+                            @Nullable PyFunction.Modifier modifier) {
     myTypeParameters = typeParameters;
     myParametersType = parametersType;
+    PyAnyType.validate(returnType);
     myReturnType = returnType;
     myCallable = callable;
     myModifier = modifier;
-    myImplicitOffset = offset;
   }
 
   public PyCallableTypeImpl(@Nullable List<PyCallableParameter> parameters, @Nullable PyType returnType) {
-    this(null, parameters != null ? new PyCallableParameterListTypeImpl(parameters) : null, returnType, null, null, 0);
+    this(null, parameters != null ? new PyCallableParameterListTypeImpl(parameters) : null, returnType, null, null);
   }
 
   public PyCallableTypeImpl(@Nullable List<PyCallableParameter> parameters,
                             @Nullable PyType returnType,
                             @Nullable PyCallable callable,
-                            @Nullable PyFunction.Modifier modifier,
-                            int offset) {
-    this(null, parameters != null ? new PyCallableParameterListTypeImpl(parameters) : null, returnType, callable, modifier, offset);
+                            @Nullable PyFunction.Modifier modifier) {
+    this(null, parameters != null ? new PyCallableParameterListTypeImpl(parameters) : null, returnType, callable, modifier);
   }
 
   @Override
@@ -90,28 +74,27 @@ public class PyCallableTypeImpl implements PyCallableType {
 
   @Override
   public @Nullable PyType getCallType(@NotNull TypeEvalContext context, @NotNull PyCallSiteOwner callSite) {
+    if (myCallable instanceof PyFunction function) {
+      for (PyTypeProvider typeProvider : PyTypeProvider.EP_NAME.getExtensionList()) {
+        final Ref<PyType> typeRef = typeProvider.getCallType(function, callSite, context);
+        if (typeRef != null) {
+          return typeRef.get();
+        }
+      }
+    }
+
     if (!PyTypeChecker.hasGenerics(myReturnType, context)) {
       return PyNarrowedType.Companion.bindIfNeeded(myReturnType, callSite);
     }
 
-    final var fullMapping = PyCallExpressionHelper.mapArguments(callSite, this, context);
-    final var actualParameters = fullMapping.getMappedParameters();
-    final var allParameters = ContainerUtil.notNullize(getParameters(context));
-    final var receiver = callSite.getReceiver(myCallable);
-    return analyzeCallType(myReturnType, actualParameters, allParameters, receiver, callSite, context);
-  }
-
-  private static @Nullable PyType analyzeCallType(@Nullable PyType type,
-                                                  @NotNull Map<PyExpression, PyCallableParameter> actualParameters,
-                                                  @NotNull Collection<PyCallableParameter> allParameters,
-                                                  @Nullable PyExpression receiver,
-                                                  @NotNull PyCallSiteOwner callsite,
-                                                  @NotNull TypeEvalContext context) {
-    final var substitutions = PyTypeChecker.unifyGenericCall(receiver, actualParameters, context);
+    List<PyExpression> arguments = callSite.getArguments(myCallable);
+    PyCallableParameterListType parametersType = new PyCallableParameterListTypeImpl(ContainerUtil.notNullize(getParameters(context)));
+    ArgumentMappingResults mappingResults = PyCallExpressionHelper.analyzeArguments(arguments, parametersType, context);
+    final var substitutions = PyTypeChecker.unifyGenericCall(null, mappingResults.getMappedParameters(), context);
     final var substitutionsWithUnresolvedReturnGenerics =
-      PyTypeChecker.getSubstitutionsWithUnresolvedReturnGenerics(allParameters, type, substitutions, context);
-    PyType typeAfterSubstitution = PyTypeChecker.substitute(type, substitutionsWithUnresolvedReturnGenerics, context);
-    return PyNarrowedType.Companion.bindIfNeeded(typeAfterSubstitution, callsite);
+      PyTypeChecker.getSubstitutionsWithUnresolvedReturnGenerics(this, myReturnType, substitutions, context);
+    PyType typeAfterSubstitution = PyTypeChecker.substitute(myReturnType, substitutionsWithUnresolvedReturnGenerics, context);
+    return PyNarrowedType.Companion.bindIfNeeded(typeAfterSubstitution, callSite);
   }
 
   @Override
@@ -181,11 +164,6 @@ public class PyCallableTypeImpl implements PyCallableType {
   }
 
   @Override
-  public int getImplicitOffset() {
-    return myImplicitOffset;
-  }
-
-  @Override
   public @Nullable PyQualifiedNameOwner getDeclarationElement() {
     return myCallable;
   }
@@ -197,15 +175,13 @@ public class PyCallableTypeImpl implements PyCallableType {
     }
 
     final List<PyCallableParameter> parameters = getParameters(context);
-    if (parameters != null && myCallable instanceof PyFunction function) {
-      final List<PyCallableParameter> functionParameters = function.getParameters(context);
+    if (ContainerUtil.isEmpty(parameters)) return this;
 
-      if (!ContainerUtil.isEmpty(parameters) && !ContainerUtil.isEmpty(functionParameters) && functionParameters.get(0).isSelf()) {
-        List<PyCallableParameter> newParameters = ContainerUtil.subList(parameters, 1);
-        return new PyCallableTypeImpl(myTypeParameters,
-                                      new PyCallableParameterListTypeImpl(newParameters),
-                                      myReturnType, myCallable, myModifier, myImplicitOffset);
-      }
+    if (parameters.getFirst().isSelf()) {
+      List<PyCallableParameter> newParameters = ContainerUtil.subList(parameters, 1);
+      return new PyCallableTypeImpl(myTypeParameters,
+                                    new PyCallableParameterListTypeImpl(newParameters),
+                                    myReturnType, myCallable, myModifier);
     }
 
     return this;
@@ -216,8 +192,7 @@ public class PyCallableTypeImpl implements PyCallableType {
     if (this == o) return true;
     if (o == null || getClass() != o.getClass()) return false;
     PyCallableTypeImpl type = (PyCallableTypeImpl)o;
-    return myImplicitOffset == type.myImplicitOffset &&
-           Objects.equals(myTypeParameters, type.myTypeParameters) &&
+    return Objects.equals(myTypeParameters, type.myTypeParameters) &&
            Objects.equals(myParametersType, type.myParametersType) &&
            Objects.equals(myReturnType, type.myReturnType) &&
            Objects.equals(myCallable, type.myCallable) &&
@@ -226,6 +201,6 @@ public class PyCallableTypeImpl implements PyCallableType {
 
   @Override
   public int hashCode() {
-    return Objects.hash(myTypeParameters, myParametersType, myReturnType, myCallable, myModifier, myImplicitOffset);
+    return Objects.hash(myTypeParameters, myParametersType, myReturnType, myCallable, myModifier);
   }
 }
